Agregamos el nav de redes, el del main menu y trabajamos el section 1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,44 @@
     <title>WWC</title>
 </head>
 <body>
-    
+    <nav id="redes">
+        <ul>
+            <li><a class='ig' id="ig">instagram</a></li>
+            <li><a class='ld' id="ld">linkedin</a></li>
+            <li>
+                <select class='idioma' id="idioma">
+                    <option value='esp'>Español</option>
+                    <option value='ing'>English</option>
+                </select>
+            </li>
+        </ul>
+    </nav>
+
+    <nav class='main_nav' id="main_nav">
+        <ul>
+            <li><a class='home' id="home">Home</a></li>
+            <li><a class='mision' id="mision">Mision</a></li>
+            <li><a class='approach' id="approach">Approach</li>
+            <li><a class='team' id="team">Team</a></li>
+            <li><a class='case' id="case">Case</a></li>
+      </ul>
+    </nav>
+
+
+    <section class='home_1' id='home_1'>
+        <footer class='index' id="index">
+            01
+            <span class='divider' id="divider"></span>
+            scroll
+        </footer>
+
+        <h1 class='title' id="title">The fastes way to achive success.</h1>
+        
+
+    </section>
+
+    <section class='home_2' id='home_2'></section>
+    <section class='home_3' id='home_3'></section>
+    <footer></footer>
 </body>
 </html>
