--- a/index.html
+++ b/index.html
@@ -37,12 +37,35 @@
         </footer>
 
         <h1 class='title' id="title">The fastes way to achive success.</h1>
-        
+        <input class="btn-home" type="buttom">
+        <input class="btn-home" type="buttom">
 
     </section>
 
-    <section class='home_2' id='home_2'></section>
-    <section class='home_3' id='home_3'></section>
-    <footer></footer>
+    <section class='home_2' id='home_2'>
+        <footer class='index' id="index">
+            02
+            <span class='divider' id="divider"></span>
+            Mision
+        </footer>
+        <h3>We bring the rigth people together to challenge established thinking and drive transformation</h3>
+        <div class="readme"><h4>Mapping</h4><h6>Realizamos un mapa de la situacion, identificando los problemas.</h6><input type="buttom"></div>
+        <div class="readme"><h4>Estrategy</h4><h6>Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.</h6><input type="buttom"></div>
+        <div class="readme"><h4>Execution</h4><h6>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</h6><input type="buttom"></div>
+
+    </section>
+    <section class='home_3' id='home_3'>
+        <div class="brand"><span class="flecha">derecha</span><span>Brand identity for ivascular</span></div>
+        <div class="brand"><span class="flecha">derecha</span><span>Brand identity for Salud Prevent</span></div>
+        <span class="flecha">derecha</span>
+        <span class="flecha">izquierda</span>
+    </section>
+    <footer>
+        <div class="logo">logo</div>
+        <h3 class="text-footer">Wanna build something greate together?<br>Let's talk</h3>
+        <div class="redes-footer"><h6><span class="bold">W - World</span>Consulting.</h6><h6>walter@wwclatam.com</h6><h6><a>Instagram</a></h6>
+        <h6><a>Linkedin</a></h6>
+        </div>
+    </footer>
 </body>
 </html>
