--- a/index.html
+++ b/index.html
@@ -7,54 +7,54 @@
 <body>
     <nav id="redes">
         <ul>
-            <li><a class='ig' id="ig">instagram</a></li>
-            <li><a class='ld' id="ld">linkedin</a></li>
+            <li><a class="ig" id="ig">instagram</a></li>
+            <li><a class="ld" id="ld">linkedin</a></li>
             <li>
-                <select class='idioma' id="idioma">
-                    <option value='esp'>Español</option>
-                    <option value='ing'>English</option>
+                <select class="idioma" id="idioma">
+                    <option value="esp">Español</option>
+                    <option value="ing">English</option>
                 </select>
             </li>
         </ul>
     </nav>
 
-    <nav class='main_nav' id="main_nav">
+    <nav class="main_nav" id="main_nav">
         <ul>
-            <li><a class='home' id="home">Home</a></li>
-            <li><a class='mision' id="mision">Mision</a></li>
-            <li><a class='approach' id="approach">Approach</li>
-            <li><a class='team' id="team">Team</a></li>
-            <li><a class='case' id="case">Case</a></li>
+            <li><a class="home" id="home">Home</a></li>
+            <li><a class="mision" id="mision">Mision</a></li>
+            <li><a class="approach" id="approach">Approach</li>
+            <li><a class="team" id="team">Team</a></li>
+            <li><a class="case" id="case">Case</a></li>
       </ul>
     </nav>
 
 
-    <section class='home_1' id='home_1'>
-        <footer class='index' id="index">
+    <section class="home_1" id="home_1">
+        <footer class="index" id="index">
             01
-            <span class='divider' id="divider"></span>
+            <span class="divider" id="divider"></span>
             scroll
         </footer>
 
-        <h1 class='title' id="title">The fastes way to achive success.</h1>
-        <input class="btn-home" type="buttom">
-        <input class="btn-home" type="buttom">
+        <h1 class="title" id="title">The fastes way to achive success.</h1>
+        <input class="btn-home" type="button">
+        <input class="btn-home" type="button">
 
     </section>
 
-    <section class='home_2' id='home_2'>
-        <footer class='index' id="index">
+    <section class="home_2" id="home_2">
+        <footer class="index" id="index">
             02
-            <span class='divider' id="divider"></span>
+            <span class="divider" id="divider"></span>
             Mision
         </footer>
         <h3>We bring the rigth people together to challenge established thinking and drive transformation</h3>
-        <div class="readme"><h4>Mapping</h4><h6>Realizamos un mapa de la situacion, identificando los problemas.</h6><input type="buttom"></div>
-        <div class="readme"><h4>Estrategy</h4><h6>Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.</h6><input type="buttom"></div>
-        <div class="readme"><h4>Execution</h4><h6>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</h6><input type="buttom"></div>
+        <div class="readme"><h4>Mapping</h4><h6>Realizamos un mapa de la situacion, identificando los problemas.</h6><input type="button"></div>
+        <div class="readme"><h4>Estrategy</h4><h6>Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.</h6><input type="button"></div>
+        <div class="readme"><h4>Execution</h4><h6>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</h6><input type="button"></div>
 
     </section>
-    <section class='home_3' id='home_3'>
+    <section class="home_3" id="home_3">
         <div class="brand"><span class="flecha">derecha</span><span>Brand identity for ivascular</span></div>
         <div class="brand"><span class="flecha">derecha</span><span>Brand identity for Salud Prevent</span></div>
         <span class="flecha">derecha</span>
