Agregamos logo al nav.

--- a/approach.html
+++ b/approach.html
@@ -19,6 +19,7 @@
     </nav>
 
     <nav class="main_nav" id="main_nav">
+        <h6><span class="bold">W - World</span>Consulting.</h6>
         <ul>
             <li><a class="home" id="home">Home</a></li>
             <li><a class="mision" id="mision">Mision</a></li>
