--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WWC</title>
+    <title>Home</title>
 </head>
 <body>
     <nav id="redes">
@@ -19,6 +19,7 @@
     </nav>
 
     <nav class="main_nav" id="main_nav">
+        <h6><span class="bold">W - World</span>Consulting.</h6>
         <ul>
             <li><a class="home" id="home">Home</a></li>
             <li><a class="mision" id="mision">Mision</a></li>
@@ -49,10 +50,21 @@
             Mision
         </footer>
         <h3>We bring the rigth people together to challenge established thinking and drive transformation</h3>
-        <div class="readme"><h4>Mapping</h4><h6>Realizamos un mapa de la situacion, identificando los problemas.</h6><input type="button"></div>
-        <div class="readme"><h4>Estrategy</h4><h6>Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.</h6><input type="button"></div>
-        <div class="readme"><h4>Execution</h4><h6>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</h6><input type="button"></div>
-
+        <div class="readme">
+            <h4>Mapping</h4>
+            <h6>Realizamos un mapa de la situacion, identificando los problemas.</h6>
+            <input type="button">
+        </div>
+        <div class="readme">
+            <h4>Estrategy</h4>
+            <h6>Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.</h6>
+            <input type="button">
+        </div>
+        <div class="readme">
+            <h4>Execution</h4>
+            <h6>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</h6>
+            <input type="button">
+        </div>
     </section>
     <section class="home_3" id="home_3">
         <div class="brand"><span class="flecha">derecha</span><span>Brand identity for ivascular</span></div>
