agregamos la page de team

--- a/team.html
+++ b/team.html
@@ -49,7 +49,39 @@
       </p>
     </section>
     <section class="team_2">
-        
+      <div class="profile">
+        <img src="#" />
+        <h6 class="subtitle">PRESIDENT</h6>
+        <h3 class="name">Walter Gonzalez</h3>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+          velit consectetur similique impedit ullam blanditiis! Quo nobis
+          praesentium temporibus possimus.
+        </p>
+        <a href="#" class="ld">Linkedin</a>
+      </div>
+      <div class="profile">
+        <img src="#" />
+        <h6 class="subtitle">PRESIDENT</h6>
+        <h3 class="name">Walter Gonzalez</h3>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+          velit consectetur similique impedit ullam blanditiis! Quo nobis
+          praesentium temporibus possimus.
+        </p>
+        <a href="#" class="ld">Linkedin</a>
+      </div>
+      <div class="profile">
+        <img src="#" />
+        <h6 class="subtitle">PRESIDENT</h6>
+        <h3 class="name">Walter Gonzalez</h3>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+          velit consectetur similique impedit ullam blanditiis! Quo nobis
+          praesentium temporibus possimus.
+        </p>
+        <a href="#" class="ld">Linkedin</a>
+      </div>
     </section>
     <footer>
       <div class="form-container">
