--- a/mission.html
+++ b/mission.html
@@ -29,14 +29,14 @@
       </ul>
     </nav>
 
-    <sction class="mission_1">
+    <section class="mission_1">
         <h2 class="title">Our approach</h2><span class="flecha"></span>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique culpa itaque possimus, quos accusantium iusto voluptate temporibus provident, et perspiciatis dicta commodi ab ipsa, ea beatae velit. Harum eos obcaecati minus recusandae? Nam nulla fugit quibusdam illo vitae quo, suscipit sapiente modi neque tempore sequi veritatis numquam aperiam explicabo ipsa exercitationem omnis itaque quas eaque asperiores esse id. Quis magni, quo omnis, laborum repellat placeat maiores molestias assumenda voluptates incidunt dolor in, praesentium voluptatem? Perferendis praesentium veritatis vitae aliquam iste amet sit ullam mollitia consequatur quod aspernatur repudiandae sunt perspiciatis, officia, harum voluptatem cum, ratione distinctio assumenda excepturi suscipit voluptas!</p>
-    </sction>
-    <sction class="mission_2">
+    </section>
+    <section class="mission_2">
         <div class="img-text"></div>
-    </sction>
-    <sction class="mission_3">
+    </section>
+    <section class="mission_3">
         <h3>We bring the rigth people together to challenge established thinking and drive transformation</h3>
         <div class="readme">
             <h4>Mapping</h4>
@@ -53,8 +53,8 @@
             <h6>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</h6>
             <input type="button">
         </div>
-    </sction>
-    <sction class="mission_4">
+    </section>
+    <section class="mission_4">
         <div class="profile">
             <img src="#" />
             <h6 class="subtitle">PRESIDENT</h6>
@@ -66,7 +66,7 @@
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptatem officia? Distinctio accusantium doloremque repudiandae rem odio fuga dolorem temporibus quibusdam. Omnis at voluptatibus, veritatis blanditiis optio aliquid minima assumenda eius recusandae dolore perspiciatis modi sint consequuntur expedita. Molestiae, architecto!</p>
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta necessitatibus consequuntur adipisci inventore voluptatibus deleniti nostrum harum! Quidem tenetur asperiores, dolore porro minima accusantium magni sed quibusdam sequi odio eaque maxime error qui, exercitationem sunt suscipit doloremque nesciunt delectus iusto.</p>
         </div>
-    </sction>
+    </section>
     <footer>
         <div class="form-container">
             <h3 class="text-footer">Wanna build something greate together?</h3>
