--- a/index.html
+++ b/index.html
@@ -57,21 +57,25 @@
             Mision
         </footer>
 
-        <h3>We bring the rigth people together to challenge established thinking and drive transformation</h3>
-        <div class="readme">
-            <h4>Mapping</h4>
-            <h6>Realizamos un mapa de la situacion, identificando los problemas.</h6>
-            <input type="button">
-        </div>
-        <div class="readme">
-            <h4>Estrategy</h4>
-            <h6>Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.</h6>
-            <input type="button">
-        </div>
-        <div class="readme">
-            <h4>Execution</h4>
-            <h6>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</h6>
-            <input type="button">
+        <div class="container">
+            <h3>We bring the rigth people together to challenge <br> established thinking and drive transformation</h3>
+            <div class="container_btn">
+                <div class="readme">
+                    <h4>Mapping</h4>
+                    <p>Realizamos un mapa de la situacion, identificando los problemas.</p>
+                    <input class="btn btn-primary" value="Read more" type="button">
+                </div>
+                <div class="readme">
+                    <h4>Estrategy</h4>
+                    <p>Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.</p>
+                    <input class="btn btn-primary" value="Read more" type="button">
+                </div>
+                <div class="readme">
+                    <h4>Execution</h4>
+                    <p>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</p>
+                    <input class="btn btn-primary" value="Read more" type="button">
+                </div>
+            </div>
         </div>
     </section>
     <section class="home_3" id="home_3">
