estilo final sin imagen home_2

--- a/index.html
+++ b/index.html
@@ -52,28 +52,40 @@
 
     <section class="home_2" id="home_2">
         <footer class="index" id="index">
-            02
-            <span class="divider" id="divider"></span>
-            Mision
+            <div>
+                About
+            </div>
+            <div class="divider" id="divider"></div>
+            <div>
+                02
+            </div>
         </footer>
 
-        <h3>We bring the rigth people together to challenge established thinking and drive transformation</h3>
-        <div class="readme">
-            <h4>Mapping</h4>
-            <h6>Realizamos un mapa de la situacion, identificando los problemas.</h6>
-            <input type="button">
-        </div>
-        <div class="readme">
-            <h4>Estrategy</h4>
-            <h6>Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.</h6>
-            <input type="button">
-        </div>
-        <div class="readme">
-            <h4>Execution</h4>
-            <h6>Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos</h6>
-            <input type="button">
+        <div class="container">
+            <h3>We bring the rigth people together to challenge <br> established thinking and drive transformation</h3>
+            <div class="container_btn">
+                <div class="readme">
+                    <div class="img"></div>
+                    <h4>Mapping</h4>
+                    <p>Realizamos un mapa de la situacion, <br> identificando los problemas.</p>
+                    <input class="btn btn-primary" value="Read more" type="button">
+                </div>
+                <div class="readme">
+                    <div class="img"></div>
+                    <h4>Estrategy</h4>
+                    <p>Desarrollamos la estrategia para sortear <br> las barreras y alcanzamos el objetivo.</p>
+                    <input class="btn btn-primary" value="Read more" type="button">
+                </div>
+                <div class="readme">
+                    <div class="img"></div>
+                    <h4>Execution</h4>
+                    <p>Diseñamos el plan junto a un equipo <br> altamente capacitado y lo ejecutamos</p>
+                    <input class="btn btn-primary" value="Read more" type="button">
+                </div>
+            </div>
         </div>
     </section>
+
     <section class="home_3" id="home_3">
         <div class="brand"><span class="flecha">derecha</span><span>Brand identity for ivascular</span></div>
         <div class="brand"><span class="flecha">derecha</span><span>Brand identity for Salud Prevent</span></div>
