pag uno temrminada (sin img)

--- a/index.html
+++ b/index.html
@@ -148,12 +148,21 @@
         </span>
         
     </section>
-    <footer>
-        <div class="logo">logo</div>
-        <div class="redes-footer"><h6><span class="bold">W - World</span>Consulting.</h6><h6>walter@wwclatam.com</h6><h6><a>Instagram</a></h6>
-        <h3 class="text-footer">Wanna build something greate together?<br>Let's talk</h3>
-        <h6><a>Linkedin</a></h6>
+    <div class="footer">
+        <div class="container_1">
+            <div class="logo">logo</div>
+            <div class="subtitle"><span>W - World</span>Consulting.</div>
         </div>
-    </footer>
+        <div class="container_2">
+            <h3 class="text-footer">Wanna build something greate together?<br>Let's talk</h3>
+            <div class="redes-footer">
+                <h6>walter@wwclatam.com</h6>
+                <div>
+                    <a>Instagram</a>
+                    <a>Linkedin</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
