--- a/index.html
+++ b/index.html
@@ -150,17 +150,24 @@
     </section>
     <div class="footer">
         <div class="container_1">
-            <div class="logo">logo</div>
             <div class="subtitle"><span>W - World</span>Consulting.</div>
+            <h3 class="text-footer">Wanna build something great together?<br>Let's talk</h3>
         </div>
         <div class="container_2">
-            <h3 class="text-footer">Wanna build something greate together?<br>Let's talk</h3>
-            <div class="redes-footer">
-                <h6>walter@wwclatam.com</h6>
-                <div>
-                    <a>Instagram</a>
-                    <a>Linkedin</a>
+            <form action="" class="formulario">
+                <div class="input_container">
+                    <input type="text" name="nombre" id="nombre" placeholder="Nombre y Apellido">
+                    <input type="email" name="email" id="email" placeholder="Correo Electronico">
                 </div>
+                <textarea name="" id="" cols="30" placeholder="Mensaje"></textarea>
+            </form>
+        </div>
+        <div class="redes-footer">
+            <div class="logo">logo</div>
+            <div class="redes">
+                <a>walter@wwclatam.com</a>
+                <a>Instagram</a>
+                <a>Linkedin</a>
             </div>
         </div>
     </div>
