--- a/approach.html
+++ b/approach.html
@@ -2,36 +2,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/approach.css">
     <title>Approach</title>
 </head>
 <body>
-    <nav id="redes">
-        <ul>
-            <li><a class="ig" id="ig">instagram</a></li>
-            <li><a class="ld" id="ld">linkedin</a></li>
-            <li>
-                <select class="idioma" id="idioma">
-                    <option value="esp">Español</option>
-                    <option value="ing">English</option>
-                </select>
-            </li>
-        </ul>
-    </nav>
 
-    <nav class="main_nav" id="main_nav">
-        <h6><span class="bold">W - World</span>Consulting.</h6>
-        <ul>
-            <li><a class="home" id="home">Home</a></li>
-            <li><a class="mision" id="mision">Mision</a></li>
-            <li><a class="approach" id="approach">Approach</li>
-            <li><a class="team" id="team">Team</a></li>
-            <li><a class="case" id="case">Case</a></li>
-      </ul>
-    </nav>
 
     <section class="approach_1">
-        <h2 class="title">Our approach</h2><span class="flecha"></span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique culpa itaque possimus, quos accusantium iusto voluptate temporibus provident, et perspiciatis dicta commodi ab ipsa, ea beatae velit. Harum eos obcaecati minus recusandae? Nam nulla fugit quibusdam illo vitae quo, suscipit sapiente modi neque tempore sequi veritatis numquam aperiam explicabo ipsa exercitationem omnis itaque quas eaque asperiores esse id. Quis magni, quo omnis, laborum repellat placeat maiores molestias assumenda voluptates incidunt dolor in, praesentium voluptatem? Perferendis praesentium veritatis vitae aliquam iste amet sit ullam mollitia consequatur quod aspernatur repudiandae sunt perspiciatis, officia, harum voluptatem cum, ratione distinctio assumenda excepturi suscipit voluptas!</p>
+        <h2 class="title">
+            <div>
+                <p>Our</p>
+            </div>
+            <div>
+                <p>Approach</p> 
+                <span class="flecha">
+                    <svg width="90" height="55" viewBox="0 0 90 55" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M62.5821 0L59.8324 2.75551L82.3638 25.335H0V29.2399H82.7252L59.7853 52.2445L62.5349 55L90 27.4764L62.5821 0Z" fill="white"/>
+                        </svg>
+                        
+                </span>
+            </div>
+        </h2>
+        <article>Vamos profundo para desbloquear la información y tener el coraje de actuar, tabajando con nuestros clientes en crear las capacidades que les permitan a la organización lograr los resultados claves.<br>
+            Nuestro equipo tiene un enfoque innovador porque busca el éxito a través del conocimiento pero aplicado en una forma diferente a la usada previamente.</article>
 
     </section>
 
