--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/footer.css">
     <title>Home</title>
 </head>
 <body>
@@ -20,6 +21,8 @@
         document.getElementById('nav').innerHTML += navTemplate()
     </script>
 
+    <section class="home_0"></section>
+
     <section class="home_1" id="home_1">
         <footer class="index" id="index">
             <div>
@@ -35,7 +38,9 @@
             <input type="button" class="btn_1 btn btn-primary" id="btn_1" value="our Mission">
             <input type="button" class="btn_2 btn btn-primary" id="btn_2" value="Watch the Presentation">
         </div>
-        <div class="imagen"></div>
+        <div class="imagen">
+            <img src="img/background.png" alt="" />
+        </div>
 
     </section>
 
