cambio de texto en home y agregado estrategia.svg

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       </footer>
       <div class="container">
         <h1 class="title" id="title">
-          <span>The</span> <br />
-          <span>fastes way </span><br />
-          <span>to achive</span> <br />
-          <span>success.</span>
+          <span>La forma</span> <br />
+          <span>más rápida </span><br />
+          <span>de alcanzar</span> <br />
+          <span>el éxito.</span>
         </h1>
       </div>
       <div class="imagen">
