--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Home</title>
   </head>
   <body>
