landings proyectos Century y prevent salud

--- a/century.html
+++ b/century.html
@@ -31,7 +31,7 @@
         var navTemplate = Handlebars.templates['titleCase'];
         var data = {
             optionalLine:'',
-            needLine: 'IVascular'
+            needLine: 'Century 21'
         }
 
         document.getElementById('title').innerHTML += navTemplate(data)
@@ -41,15 +41,18 @@
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['case'];
-        var texto_iv = "<p>líder en dispositivos médicos e innovación de origen europeo, con foco en la creación de soluciones terapéuticas de enfermedades Cardiovasculares y Neurovasculares.</p>"
-        texto_iv += "<p> A través de la calidad y soporte en evidencia clínica, está presente en 96 países, siendo así un referente en el mercado.</p> "
-        texto_iv += "<p> WWC participa del liderazgo en Latino América, brindado soporte gerencial en todos y cada uno de los territorios de esta región. El principal foco de desarrollo es lograr un posicionamiento que brinde a los pacientes mejores, y más accesibles, tratamientos a sus enfermedades endovasculares, junto con un crecimiento sostenido y sustentable a la organización en todo LATAM.</p> "
+        var texto_iv = "<p>WWC trabaja en el asesoramiento de la franquicia americana Century 21 de bienes raíces. Al igual que la Salud, consideramos que la vivienda es una"
+        texto_iv += "necesidad básica de todos ser humano y por eso que es de nuestro interés.<br>"
+        texto_iv += "C21, fundada en 1971, es la red internacional de soluciones inmobiliarias con más reconocimiento a nivel mundial que busca mejorar y cambiar la vida"
+        texto_iv += "de las personas en relación a su vivienda. Experiencia, calidad y servicio han permitido que en 50 años tengan presencia en 83 países, con más de"
+        texto_iv += "10.000 oficinas y alrededor de 125.000 agentes en todo el mundo.</p>"
+        texto_iv += "<p>WWC contribuye con C21 al desarrollo de proyectos y soluciones Inmobiliarias innovadoras, integrales y ajustadas a las necesidades de sus clientes, a través de un servicio de alta calidad y desarrollo de confianza, credibilidad y satisfacción por parte de nuestros asesores que nos permita consolidar relaciones de largo plazo.</p>"
         
-        var img_1 = '<img src="img/ivascularImg1.png" alt="" class="img1">'
-        var img_2 = '<img src="img/ivascularImg2.png" alt="" class="img2">'
-        var nextPro = 'IIvascular'
+        var img_1 = '<img src="img/centuryImg1.png" alt="" class="img1">'
+        var img_2 = '<img src="img/centuryImg2.png" alt="" class="img2">'
+        var nextPro = 'Century 21'
         var sectoPro = 'Salud'
-        var logPro = '<img class="alto" src="img/logoCentury.png" alt="">'
+        var logPro = '<img class="ancho" src="img/logoSalud.png" alt="">'
 
         var data = {
             texto: texto_iv,
