--- a/saludPrevent.html
+++ b/saludPrevent.html
@@ -30,8 +30,8 @@
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['titleCase'];
         var data = {
-            optionalLine:'',
-            needLine: 'IVascular'
+            optionalLine:'Salud',
+            needLine: 'Prevent'
         }
 
         document.getElementById('title').innerHTML += navTemplate(data)
@@ -41,15 +41,15 @@
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['case'];
-        var texto_iv = "<p>líder en dispositivos médicos e innovación de origen europeo, con foco en la creación de soluciones terapéuticas de enfermedades Cardiovasculares y Neurovasculares.</p>"
-        texto_iv += "<p> A través de la calidad y soporte en evidencia clínica, está presente en 96 países, siendo así un referente en el mercado.</p> "
-        texto_iv += "<p> WWC participa del liderazgo en Latino América, brindado soporte gerencial en todos y cada uno de los territorios de esta región. El principal foco de desarrollo es lograr un posicionamiento que brinde a los pacientes mejores, y más accesibles, tratamientos a sus enfermedades endovasculares, junto con un crecimiento sostenido y sustentable a la organización en todo LATAM.</p> "
+        var texto_iv = "<p>Al igual que en el área de salud, Salud Prevent participa en el desarrollo de una plataforma de educación y de terapia digital, que permite a los pacientes aprender a cuidarse más y mejor.</p>"
+        texto_iv += "<p>Esta solución busca mantener a las personas en la salud a través de la reeducación y el cambio de hábitos con el objetivo de mejorar la calidad de vida y disminuir el riesgo de enfermedades cardiovasculares que pueden llevar a la muerte. Reducir los factores de riesgo cardíacos no es un tema de tratamientos farmacológicos sino de cambio de hábitos y conocimiento aplicado al día a día. Dietas, ejercicio, reducir el estrés y otros puntos clave de los cambios de conductas, requieren un proceso de aprendizaje y educación.</p>"
+        texto_iv += "<p>Partiendo de la ciencia, desarrollamos una terapéutica digital que permite el monitoreo de poblaciones de riesgo y actuar a tiempo con programas a medida de cada individuo.<p/><p>Una de cada 3 personas morirán por causas cardiovasculares a nivel mundial y el rol de la educación puede reducir significativamente estas cifras.</p>"
         
-        var img_1 = '<img src="img/ivascularImg1.png" alt="" class="img1">'
-        var img_2 = '<img src="img/ivascularImg2.png" alt="" class="img2">'
-        var nextPro = 'IIvascular'
+        var img_1 = '<img src="img/saludImg1.png" alt="" class="img1">'
+        var img_2 = '<img src="img/saludImg2.png" alt="" class="img2">'
+        var nextPro = 'Salud Prevent'
         var sectoPro = 'Salud'
-        var logPro = '<img class="alto" src="img/logoCentury.png" alt="">'
+        var logPro = '<img class="ancho" src="img/ivascularLogo.png" alt="">'
 
         var data = {
             texto: texto_iv,
